# quantanalysis

./: .gitignore  README.md  download_fonts.py  example.py  i18n_example.py  pyproject.toml  setup.py  simple_example.py  test_installed_package.py
quantanalysis/: __init__.py  _version.py  core.py  i18n.py  reports.py
quantanalysis/fonts/: README.md
src/quantanalysis/: __init__.py  _version.py  core.py  reports.py  utils.py
src/quantanalysis/fonts/: README.md
